Register added